--- a/plugins/tech/pom.xml
+++ b/plugins/tech/pom.xml
@@ -53,6 +53,7 @@
                 </property>
             </activation>
             <modules>
+                <module>arrow</module>
                 <module>aws</module>
                 <module>azure</module>
                 <module>avro</module>
