--- a/assemblies/plugins/tech/arrow/pom.xml
+++ b/assemblies/plugins/tech/arrow/pom.xml
@@ -22,27 +22,26 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>hop-assemblies-plugins</artifactId>
         <groupId>org.apache.hop</groupId>
+        <artifactId>hop-assemblies-plugins-tech</artifactId>
         <version>2.1.0-SNAPSHOT</version>
     </parent>
+
+    <artifactId>hop-assemblies-plugins-tech-arrow</artifactId>
+    <version>2.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-
-    <artifactId>hop-assemblies-plugins-tech</artifactId>
-
-    <name>Hop Assemblies Plugins Technology</name>
+    <name>Hop Assemblies Plugins Technology Arrow</name>
     <description></description>
 
-    <modules>
-        <module>arrow</module>
-        <module>avro</module>
-        <module>aws</module>        
-        <module>azure</module>
-        <module>cassandra</module>
-        <module>dropbox</module>
-        <module>google</module>
-        <module>neo4j</module>
-        <module>parquet</module>
-    </modules>
+    <properties>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.hop</groupId>
+            <artifactId>hop-plugins-tech-arrow</artifactId>
+            <version>2.1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
