--- a/plugins/tech/arrow/pom.xml
+++ b/plugins/tech/arrow/pom.xml
@@ -58,7 +58,7 @@
             <groupId>org.apache.arrow</groupId>
             <artifactId>arrow-memory-netty</artifactId>
             <version>${arrow.version}</version>
-            <scope>test</scope>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 </project>
